--- a/package.json
+++ b/package.json
@@ -1,15 +1,10 @@
 {
-  "name": "p2_quiz",
+  "name": "p3_quiz",
   "version": "1.0.0",
   "description": "Quiz proyect",
   "main": "main.js",
   "scripts": {
-    "start": "node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/juanlluva/P2_Quiz.git"
+    "start": "node main.js"
   },
   "keywords": [
     "quiz",
@@ -19,12 +14,10 @@
   ],
   "author": "Juan Lluva",
   "license": "Unlicense",
-  "bugs": {
-    "url": "https://github.com/juanlluva/P2_Quiz/issues"
-  },
-  "homepage": "https://github.com/juanlluva/P2_Quiz#readme",
   "dependencies": {
     "chalk": "^2.3.1",
-    "figlet": "^1.2.0"
+    "figlet": "^1.2.0",
+    "sequelize": "^4.35.2",
+    "sqlite3": "^3.1.13"
   }
 }
